# DependencySolution

./: .conan_cmd.py  .conanfile.py  .gitignore  CMakeLists.txt  README.md  build.property  build.property.template  conan_cmd.py  conanfile.py  conanfile.txt  package.xml  profile
cmake/: trunk_util.cmake  utils.cmake
conan/: conan_cmd.py
test/: CMakeLists.txt  README.md  main.cc  test.cc  test.h
