<?xml version="1.0"?>
<package format="2">
  <name> TODO </name>
  <version> 1.0.0 </version>
  <description> TODO </description>
  <maintainer email="trunk@turnk.tech"> Trunk </maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/leggedrobotics/darknet_ros</url>
  <author email="trunk@turnk.tech"> Trunk </author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>rostest</test_depend>
</package>
