FILE(GLOB SRC_LIST *.cc)

MESSAGE("SRC_LIST: ${SRC_LIST}")
MESSAGE("CONAN_LIBS: ${CONAN_LIBS}")
MESSAGE("CONAN_INCLUDE_DIRS: ${CONAN_INCLUDE_DIRS}")
MESSAGE("CONAN_LIBS: ${CONAN_LIBS}")

SET(CMAKE_CXX_FLAGS "-pthread ${CMAKE_CXX_FLAGS}")

ADD_EXECUTABLE(a.out ${SRC_LIST})

ADD_LIBRARY(test1 SHARED test.cc)

TARGET_LINK_LIBRARIES(a.out
    test1)

TARGET_LINK_LIBRARIES(test1
    ${CONAN_LIBS})


INSTALL(TARGETS test1
    LIBRARY DESTINATION package/lib)

INSTALL(FILES test.h
    DESTINATION package/include)

# ln -s output/package package
